--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mongodb": "^4.7.0",
+    "mongoose": "^6.4.0",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0"
