--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
+    "react-modal": "^3.15.1",
     "slate": "^0.81.1",
     "slate-react": "^0.81.0"
   },
