--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-modal": "^3.15.1",
+    "reactjs-localstorage": "^1.0.1",
     "sha256": "^0.2.0",
     "slate": "^0.81.1",
     "slate-react": "^0.81.0"
@@ -39,5 +40,4 @@
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.2"
   }
-  
 }
